# legacy-code-modernizer

./: IDEA.md  README.md  pyproject.toml
src/legacy_code_modernizer/: __init__.py  cli.py  modernization_engine.py
tests/: test_modernization_engine.py
