[build-system]
requires = ["hatchling", "tree-sitter>=0.20"]
build-backend = "hatchling.build"

[project]
name = "legacy-code-modernizer"
version = "0.1.0"
description = "The autonomous agent that rewrites your legacy enterprise software"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "code-modernization",
    "legacy-migration",
    "cobol",
    "fortran",
    "java",
    "go",
    "rust",
    "typescript",
    "ast",
    "transpilation",
    "enterprise"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "tree-sitter>=0.20",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/legacy-code-modernizer"
Documentation = "https://github.com/avasis-ai/legacy-code-modernizer#readme"
Repository = "https://github.com/avasis-ai/legacy-code-modernizer.git"
Issues = "https://github.com/avasis-ai/legacy-code-modernizer/issues"

[project.scripts]
legacy-modernizer = "legacy_code_modernizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legacy_code_modernizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
